classDiagram
    %% 클래스 정의
    class Password {
        -String value
        -boolean encrypted
        +Password(String plainPassword)
        +static Password ofEncrypted(String encryptedValue)
        +String getValue()
        +boolean isEncrypted()
        +boolean matches(String plainPassword)
        -validatePassword(String password)
        +equals(Object o)
        +hashCode()
        +toString()
    }

    classDiagram
    class PasswordPolicy {
<<interface>>
+void validate(String password)
+boolean isValid(String password)
    }

class DefaultPasswordPolicy {
+void validate(String password)
+boolean isValid(String password)
}

PasswordPolicy <|.. DefaultPasswordPolicy
Password --> PasswordPolicy : validatesWith


class PasswordEncoder {
        <<interface>>
        +String encrypt(String rawPassword)
        +boolean matches(String rawPassword, String encodedPassword)
    }

    class BCryptPasswordEncoderImpl {
        -BCryptPasswordEncoder encoder
        +BCryptPasswordEncoderImpl()
        +BCryptPasswordEncoderImpl(int strength)
        +String encrypt(String rawPassword)
        +boolean matches(String rawPassword, String encodedPassword)
    }

    class DomainException {
        <<abstract>>
        #String message
        #Throwable cause
    }

    class PasswordException {
        <<abstract>>
        #String message
        #Throwable cause
    }

    class EmptyPasswordException {
        +EmptyPasswordException()
    }

    class InvalidPasswordFormatException {
        +InvalidPasswordFormatException(String message)
        +InvalidPasswordFormatException(List~String~ violations)
    }

    class PasswordEncryptionException {
        +PasswordEncryptionException(String message)
        +PasswordEncryptionException(String message, Throwable cause)
    }

    class PasswordMismatchException {
        +PasswordMismatchException()
    }

    class User {
        -Long id
        -Email email
        -Password password
        -Name name
        -Role role
        +updateProfile(Name newName)
        +changePassword(Password newPassword)
        +changeRole(Role newRole)
    }

    class UserService {
        -UserRepository userRepository
        -PasswordEncoder passwordEncoder
        +Long registerUser(String email, String password, String name)
        +User authenticateUser(String email, String password)
        +void changePassword(Long userId, String current, String newPassword)
    }

    %% 관계 정의
    User "1" *-- "1" Password : contains

    UserService --> PasswordEncoder : uses
    UserService --> User : creates/manages

    PasswordEncoder <|.. BCryptPasswordEncoderImpl : implements

    DomainException <|-- PasswordException : extends
    PasswordException <|-- EmptyPasswordException : extends
    PasswordException <|-- InvalidPasswordFormatException : extends
    PasswordException <|-- PasswordEncryptionException : extends
    PasswordException <|-- PasswordMismatchException : extends